# SmartQuizGenerator

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  build_files.sh  manage.py  pyproject.toml  requirements.txt  run_api_on_modal.py  run_django_dev.sh  run_django_gunicorn.sh  vercel.json
cloud_api/: openapi.json  requirements.txt  run_api_on_modal.py
quiz_gen_django/: .env.example  README.md  asgi.py  build_files.sh  db.sqlite3  gen_abc.py  gen_api.py  gen_local.py  model_gen_incorrect.py  pyproject.toml  requirements.txt  settings.py  urls.py  views.py  wsgi.py
quiz_gen_django/quiz_gen_django/: asgi.py  gen_abc.py  gen_api.py  gen_local.py  model_gen_qa.py  question_generating.py  search_wikipedia.py  settings.py  urls.py  views.py  wsgi.py
quiz_gen_django/static/: style.css
quiz_gen_django/static/js/: quiz.js
quiz_gen_django/templates/: base.html  error.html  home.html  quiz.html
static/: style.css
templates/: home.html
